--- a/FrontEnd/src/Componentes/AlterarOrdem/AlterarOrdem.css
+++ b/FrontEnd/src/Componentes/AlterarOrdem/AlterarOrdem.css
@@ -107,7 +107,7 @@ textarea {
 .status {
   margin-bottom: 15px;
   width: 100%;
-  height: 40px; /* Exemplo de altura ajustada */
+  height: 40px; 
 }
 
 label {
